# revc-android

./: .gitignore  README.md  build.gradle  settings.gradle  wscript
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cmake/: FindOpenGL.cmake
app/src/main/java/com/wn_klaymen1n/revc/: FileAdapter.java  FilepickerActivity.java  LauncherActivity.java  LoadingActivity.java  SettingsActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/drawable/: loading_panel.xml
app/src/main/res/layout/: activity_loading.xml  activity_main.xml  back_button_layout.xml  filepicker.xml  list_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
legacy/: waf
legacy/scripts/waifulib/: compiler_optimizations.py  xcompile.py
legacy/utils/gxt/: american.txt  french.txt  german.txt  italian.txt  spanish.txt
native/src/: wscript
native/src/animation/: AnimManager.cpp  AnimationId.h  CutsceneMgr.cpp
native/src/audio/oal/: stream.cpp
native/src/control/: GameLogic.cpp
native/src/core/: Cam.cpp  Camera.cpp  Camera.h  CdStreamPosix.cpp  ControllerConfig.cpp  ControllerConfig.h  FileLoader.cpp  FileMgr.cpp  Frontend.cpp  Frontend.h  Game.cpp  MenuScreensCustom.cpp  Pad.cpp  Pad.h  PlayerInfo.h  Radar.cpp  Radar.h  Streaming.cpp  common.h  config.h  main.cpp  re3.cpp
native/src/entities/: Entity.cpp
native/src/extras/: custompipes.cpp  custompipes_gl.cpp  postfx.cpp
native/src/extras/shaders/: colourfilterVC_f.cg  colourfilterVC_f.h  contrast_f.cg  contrast_f.h  default_UV2.vert  im2d.vert  im2d_UV2.vert  im2d_v.cg  neoGloss.vert  neoRim.vert  neoRimSkin.vert  neoVehicle.vert
native/src/fakerw/: fake.cpp
native/src/peds/: Ped.cpp  Ped.h  PedAI.cpp  PedFight.cpp  PlayerPed.cpp
native/src/renderer/: Hud.cpp  Hud.h  Timecycle.h  Touch.cpp  Touch.h  WaterLevel.cpp
native/src/rw/: RwHelper.cpp  TexRead.cpp
native/src/skel/: crossplatform.cpp  crossplatform.h  events.cpp  skeleton.cpp
native/src/skel/android/: android.cpp  android.h  crashhandler.cpp
native/src/skel/glfw/: glfw.cpp
native/src/skel/sdl2/: sdl2.cpp
native/src/vehicles/: Automobile.cpp  Bike.cpp  Boat.cpp
scripts/waifulib/: xcompile.py
src/core/: main.cpp
src/renderer/: Hud.cpp  Touch.cpp
src/skel/: events.cpp
